def ndk_version = '29.0.14206865'
def cmake_version = '4.1.2'

buildscript {
    ext {
        kotlin_version = '2.2.21'
    }
    repositories {
        google()
        mavenCentral()
    }
    dependencies {
        classpath "com.android.tools.build:gradle:8.13.2"
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"

        // NOTE: Do not place your application dependencies here; they belong
        // in the individual module build.gradle files
    }
}

allprojects {
    repositories {
        google()
        mavenCentral()
    }
}

apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'

android {
    namespace 'com.mousebirdconsulting.whirlyglobemaply'
    compileSdk = 36
    buildToolsVersion = '36.0.0'
    defaultConfig {
        minSdkVersion 23
        targetSdkVersion 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        buildFeatures {
            buildConfig true
        }
        buildTypes {
            debug {
                debuggable true
                jniDebuggable true
                ndk {
                    abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
                    debuggable true
                }
                externalNativeBuild {
                    cmake {
                        cppFlags "-g",              // enable debug info
                            "-DDEBUG=1",            // Debug flags
                            "-DCMAKE_BUILD_TYPE=Debug",
                            "-O0",
                            //"-O1",                  // Minimal optimize. (-Wuninitialized requires -O1)
                                                    // Change to -O0 if you're having trouble debugging
                            "-Wall", "-Wextra",     // warnings
                            "-Wno-unknown-pragmas", // ignore, e.g., clang-tidy annotations

                            "-Wuninitialized",      // requires -O1 or above, but doesn't seem to work anyway
                            "-Wmissing-field-initializers",
                            "-Woverloaded-virtual",

                            "-Wno-unused-parameter",
                            "-Wno-unused-private-field",
                            "-Wno-reorder",
                            "-Wno-sign-compare",
                            "-Wno-missing-braces",
                            "-Wno-null-pointer-arithmetic"
                        version cmake_version
                    }
                }
            }
            /*
            devRelease {
                debuggable true
                jniDebuggable true
                ndk {
                    abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
                    debuggable true
                }
                externalNativeBuild {
                    cmake {
                        cppFlags "-O2", "-DNDEBUG=1",
                                "-DCMAKE_BUILD_TYPE=Release",
                                "-DWK_MIN_LOG_LEVEL=WKLogLevel::Verbose"
                    }
                }
            }
            */
            release {
                debuggable false
                jniDebuggable false
                ndk {
                    abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
                    debuggable false
                }
                externalNativeBuild {
                    cmake {
                        cppFlags "-O2", "-DNDEBUG=1", "-DCMAKE_BUILD_TYPE=Release"
                        version cmake_version
                    }
                }
            }
        }

        externalNativeBuild {
            cmake {
                cppFlags "-frtti", "-fexceptions", "-std=gnu++14"
                version cmake_version
            }
        }

    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            jniDebuggable true
        }
    }
    externalNativeBuild {
        cmake {
            path "CMakeLists.txt"
            version cmake_version
        }
    }
    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = JavaVersion.VERSION_17
    }
    testOptions {
        reportDir "build/outputs/reports"
        resultsDir "build/outputs/results"
        //unitTests {
            //all {
                //jvmArgs '-XX:MaxPermSize=256m'
                //if (it.name == 'testDebugUnitTest') {
                //    systemProperty 'debug', 'true'
                //}
            //}
        //}
    }
    ndkVersion ndk_version
}

dependencies {
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'

    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.7.1'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:runner:1.7.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    implementation 'androidx.core:core-ktx:1.17.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    api 'com.google.android.gms:play-services-location:21.3.0'
    implementation 'com.squareup.okhttp3:okhttp:5.3.2'
}

android.defaultConfig.ndk.debugSymbolLevel = 'full'
